force-app/main/default/objects/Corrective_Action__c/Corrective_Action__c.object-meta.xml
<CustomObject>
    <label>Corrective Action</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Corrective Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrective Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>