force-app/main/default/objects/Corrective_Action__c/fields/Corrective_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corrective Action Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>