force-app/main/default/objects/Corrective_Action__c/fields/Corrective_Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corrective Action Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Corrective_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>