force-app/main/default/objects/Corrective_Action__c/fields/Installation_Audit__c.field-meta.xml
<CustomField>
    <fullName>Installation_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Audit #</label>
    <referenceTo>Installation_Audit__c</referenceTo>
    <relationshipLabel>Corrective Actions</relationshipLabel>
    <relationshipName>Corrective_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>